align fix on search overlay

--- a/src/components/SearchOverlay/SearchOverlay.module.css
+++ b/src/components/SearchOverlay/SearchOverlay.module.css
@@ -266,7 +266,7 @@
 
   .searchImageSearchSection {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
   }
 
